fixed overflow x problem

--- a/css/feedback_other.css
+++ b/css/feedback_other.css
@@ -30,6 +30,7 @@ html, body {
 	width: 100%;
 	height: 90%;
 	overflow: scroll;
+	overflow-x: hidden;
 }
 
 .disable_select {
